# Hackathon-Examples

./: .env-sample  .gitignore  CODEOWNERS  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
api/: money_movement.py
src/hackathon_helper/api/: api_builder.py  core_banking.py  money_movement.py
