[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mctc_hackathon_robot297"
version = "0.0.1"
authors = [
  { name="Daniel Obot", email="danobot@hotmail.com" },
  { name="Elizabeth Shockey", email="coffee@snob.beans"}
]
description = "Libraries to help with the MCTC Hackathon"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/robot297/Hackathon-Examples"
"Bug Tracker" = "https://github.com/robot297/Hackathon-Examples/issues"
